# baby-rover

./: .gitignore  README.md
.claude/: CLAUDE.md
.claude/projects/-home-babyrover-baby-rover/memory/: MEMORY.md  feedback_session_log_commits.md
analysis/: encoder_analysis.py  plot_pid_response.py  pulseview_edge_count.py
analysis/bags/2603221030/: 2603221030_0.mcap  metadata.yaml
docs/: decisions.md  dependencies.md  hardware.md  interface_contract.md  session_log.md
docs/hardware_software_interface/: encoder.md
nodes/: motor_controller.cpp  motor_controller.py
rover_control/: CMakeLists.txt  package.xml
rover_control/src/: motor_controller.cpp
